--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "devDependencies": {
     "autoprefixer": "^10.4.18",
+    "daisyui": "^4.7.3",
     "postcss": "^8.4.35",
     "postcss-nesting": "^12.1.0",
     "tailwindcss": "^3.4.1",
