--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,6 +18,7 @@ python-dotenv = "^1.0.1"
 [tool.poetry.group.dev.dependencies]
 ipython = "^8.22.2"
 ruff = "^0.3.2"
+pre-commit = "^3.6.2"
 
 
 [tool.poetry.group.production.dependencies]
