chore: Run pre-commit hooks in CI

--- a/tox.ini
+++ b/tox.ini
@@ -1,15 +1,16 @@
 [tox]
-envlist = lint, test-py3
+envlist = test-py3, pre-commit
 minversion = 3.21.0
 isolated_build = true
 
-[testenv:lint]
+[testenv:pre-commit]
 # no need to install package with deps to lint sources
 skip_install = true
+passenv = SSH_AUTH_SOCK
 deps =
-  ruff
+  pre-commit
 commands =
-  ruff check --no-fix turtlemail
+  pre-commit run --all-files
 
 [testenv:test-py3]
 sitepackages = true
