--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,14 +17,28 @@ babel = "^2.14.0"
 
 
 [tool.poetry.group.dev.dependencies]
-ipython = "^8.22.2"
+# Since ipython conflicts with the commitizen package,
+# I've removed it for now as it seemed unused.
+# If that's a problem, we'll have to remove commitizen again
+# ipython = "^8.22.2"
 ruff = "^0.3.2"
 pre-commit = "^3.6.2"
+commitizen = "^3.18.3"
 
 
 [tool.poetry.group.production.dependencies]
 uvicorn = "^0.28.0"
 sentry-sdk = "^1.41.0"
+
+
+[tool.commitizen]
+name = "cz_conventional_commits"
+tag_format = "v$version"
+version_scheme = "semver"
+version_provider = "poetry"
+update_changelog_on_bump = true
+major_version_zero = true
+
 
 [build-system]
 requires = ["poetry-core"]
