--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,7 @@ django-jinja = "^2.11.0"
 dj-database-url = "^2.1.0"
 whitenoise = "^6.6.0"
 python-dotenv = "^1.0.1"
+babel = "^2.14.0"
 
 
 [tool.poetry.group.dev.dependencies]
