--- a/pyproject.toml
+++ b/pyproject.toml
@@ -24,6 +24,7 @@ babel = "^2.14.0"
 ruff = "^0.3.2"
 pre-commit = "^3.6.2"
 git-cliff = "^2.1.2"
+djlint = "^1.34.1"
 
 
 [tool.poetry.group.production.dependencies]
@@ -38,6 +39,13 @@ version_scheme = "semver"
 version_provider = "poetry"
 update_changelog_on_bump = false
 major_version_zero = true
+
+
+[tool.djlint]
+# T003: allow endblock without specifying block name
+# H030: allow missing meta description
+# H031: allow missing meta tag
+ignore = "T003,H030,H031"
 
 
 [build-system]
