--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,7 @@ dj-database-url = "^2.1.0"
 whitenoise = "^6.6.0"
 python-dotenv = "^1.0.1"
 babel = "^2.14.0"
+pyyaml = "^6.0.1"
 
 
 [tool.poetry.group.dev.dependencies]
