--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,7 @@ whitenoise = "^6.6.0"
 python-dotenv = "^1.0.1"
 babel = "^2.14.0"
 pyyaml = "^6.0.1"
+django-types = "^0.19.1"
 
 
 [tool.poetry.group.dev.dependencies]
