--- a/package.json
+++ b/package.json
@@ -5,12 +5,14 @@
     "dev": "vite",
     "build": "tsc && vite build",
     "preview": "vite preview",
-    "lint": "true",
+    "lint": "eslint src/ vite.config.ts tailwind.config.js postcss.config.js",
     "test": "true"
   },
   "devDependencies": {
+    "@antfu/eslint-config": "^2.15.0",
     "autoprefixer": "^10.4.18",
     "daisyui": "^4.7.3",
+    "eslint": "^9.0.0",
     "postcss": "^8.4.35",
     "postcss-nesting": "^12.1.0",
     "tailwindcss": "^3.4.1",
