--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "devDependencies": {
     "@antfu/eslint-config": "^2.15.0",
+    "@types/leaflet": "^1.9.11",
     "@vitejs/plugin-vue": "^5.0.4",
     "autoprefixer": "^10.4.18",
     "daisyui": "^4.7.3",
@@ -23,7 +24,9 @@
     "vue-tsc": "^2.0.13"
   },
   "dependencies": {
+    "@vueuse/core": "^10.9.0",
     "htmx.org": "^1.9.11",
+    "leaflet": "^1.9.4",
     "vue": "^3.4.23"
   }
 }
