--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,7 @@
 
 services:
   database:
-    image: postgres:15-alpine
+    image: postgis/postgis:15-3.4-alpine
     env_file: [docker/env]
     restart: always
     volumes:
