chore: Add pre-commit hook for missing migrations

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -46,3 +46,9 @@ test::python:
   before_script:
     - apt update -y
     - apt install -y binutils libproj-dev gdal-bin python3-psycopg2
+
+lint::python:
+  before_script:
+    - apt update -y
+    # Needed to run the "check-migrations" pre-commit hook
+    - apt install -y binutils libproj-dev gdal-bin python3-psycopg2
