--- a/tox.ini
+++ b/tox.ini
@@ -4,13 +4,16 @@ minversion = 3.21.0
 isolated_build = true
 
 [testenv:pre-commit]
-# no need to install package with deps to lint sources
-skip_install = true
 passenv = SSH_AUTH_SOCK
 deps =
   pre-commit
 commands =
   pre-commit run --all-files
+
+[testenv:lint-migrations]
+passenv = SSH_AUTH_SOCK
+commands =
+  python3 turtlemail/manage.py makemigrations --check --dry-run --no-input
 
 [testenv:test-py3]
 sitepackages = true
