--- a/tox.ini
+++ b/tox.ini
@@ -1,9 +1,9 @@
 [tox]
-envlist = test-py3, pre-commit
+envlist = test-py3, lint-pre-commit
 minversion = 3.21.0
 isolated_build = true
 
-[testenv:pre-commit]
+[testenv:lint-pre-commit]
 passenv = SSH_AUTH_SOCK
 deps =
   pre-commit
