--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,6 +18,7 @@ python-dotenv = "^1.0.1"
 babel = "2.15.0"
 pyyaml = "^6.0.1"
 django-types = "^0.19.1"
+psycopg = {extras = ["binary"], version = "^3.1.18"}
 
 
 [tool.poetry.group.dev.dependencies]
