chore: Show git diff for failing lints in CI

--- a/tox.ini
+++ b/tox.ini
@@ -8,7 +8,7 @@ passenv = SSH_AUTH_SOCK
 deps =
   pre-commit
 commands =
-  pre-commit run --all-files
+  pre-commit run --all-files --show-diff-on-failure
 
 [testenv:lint-migrations]
 passenv = SSH_AUTH_SOCK
