--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "devDependencies": {
     "@antfu/eslint-config": "^2.15.0",
+    "@tailwindcss/typography": "^0.5.13",
     "@types/leaflet": "^1.9.11",
     "@vitejs/plugin-vue": "^5.0.4",
     "autoprefixer": "^10.4.18",
