feat: Add new logo and custom color theme

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -50,7 +50,8 @@ major_version_zero = true
 # T003: allow endblock without specifying block name
 # H030: allow missing meta description
 # H031: allow missing meta tag
-ignore = "T003,H030,H031"
+# H006: img tag should have height and width attributes
+ignore = "T003,H030,H031,H006"
 
 
 [build-system]
