--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,17 +14,25 @@ services:
       timeout: 5s
       retries: 5
 
-  backend:
+  key-value-store:
+    image: registry.redict.io/redict:7
+    restart: always
+
+  backend: &backend
     build:
       dockerfile: Dockerfile
       context: .
     depends_on:
-      database:
-        condition: service_healthy
+      database: { condition: service_healthy }
+      key-value-store: { condition: service_started }
     env_file: [docker/env]
     volumes:
       - turtlemail-data:/var/lib/turtlemail
       - ./turtlemail_settings.py:/etc/turtlemail/turtlemail_settings.py
+
+  worker:
+    <<: *backend
+    command: ["run_huey"]
 
   nginx:
     image: nginx
