--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -7,6 +7,9 @@ repos:
       - id: trailing-whitespace
       - id: end-of-file-fixer
       - id: check-yaml
+        # Allow !reference tags in .gitlab-ci.yml
+        # https://github.com/pre-commit/pre-commit-hooks/issues/701
+        args: ['--unsafe']
       - id: check-added-large-files
   - repo: https://github.com/astral-sh/ruff-pre-commit
     rev: v0.3.2
