--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -22,6 +22,8 @@ workflow:
       when: never
     # Run branch pipelines when there's no merge request open
     - if: $CI_COMMIT_BRANCH
+    # Run tag pipelines
+    - if: $CI_COMMIT_TAG
 
 default:
   tags:
