fix: Always run manually triggered pipelines

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -10,6 +10,8 @@ variables:
 
 workflow:
   rules:
+    # Run manually triggered pipelines
+    - if: $CI_PIPELINE_SOURCE == "web"
     # Skip if there's a wip commit
     - if: '$CI_PIPELINE_SOURCE == "merge_request_event" && $CI_COMMIT_MESSAGE =~ /^wip:.*/'
       when: never
