--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "typescript": "^5.4.2",
     "vite": "^5.1.6",
     "vite-svg-loader": "^5.1.0",
-    "vue-tsc": "^2.0.13"
+    "vue-tsc": "^2.0.13",
+    "@rollup/plugin-inject": "^5.0.5"
   },
   "dependencies": {
     "@vueuse/core": "^10.9.0",
