--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,6 +22,8 @@ psycopg = {extras = ["binary"], version = "^3.1.18"}
 django-huey = "^1.2.1"
 redis = "^5.0.6"
 django-model-utils = "^4.5.1"
+channels = "^4.1.0"
+websockets = "^12.0"
 
 
 [tool.poetry.group.dev.dependencies]
