fix: Add missing translations

--- a/babel.cfg
+++ b/babel.cfg
@@ -1,4 +1,8 @@
+[extractors]
+custom_jinja2 = turtlemail.babel_extract:babel_extract
+
 [python: **.py]
 
-[jinja2: **.jinja]
+[custom_jinja2: **.jinja]
 encoding = utf-8
+silent = False
