--- a/docker/nginx-server.conf
+++ b/docker/nginx-server.conf
@@ -23,7 +23,34 @@ http {
   }
 
   server {
-    listen 8637 default_server;
-    include snippets/app.conf;
+    listen 8080 default_server;
+
+    location / {
+      return 301 https://$host$request_uri;
+    }
+  }
+
+  server {
+    listen 43443 ssl http2;
+    server_name turtlemail.app;
+
+    ssl_certificate /var/lib/certs/fullchain.pem;
+    ssl_certificate_key /var/lib/certs/privkey.pem;
+
+    root /var/lib/turtlemail/public/;
+
+    location / {
+            proxy_redirect off;
+            proxy_buffering off;
+            proxy_http_version 1.1;
+            proxy_pass_request_headers on;
+            proxy_set_header Upgrade $http_upgrade;
+            proxy_set_header Connection $connection_upgrade;
+            proxy_set_header Host $http_host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;
+            proxy_pass http://backend:8000;
+    }
   }
 }
